--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "Projects"
-    url: /progects/
+    url: /projects/
   - title: "Categories"
-    url: /categories/
+    url: ../categories/
   - title: "Tags"
-    url: /tags/
+    url: ../tags/
   - title: "About"
     url: /about/
