--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,4 @@ main:
   - title: "Projects"
     url: /projects/
   - title: "Categories"
-    url: ../categories/
-  - title: "Tags"
-    url: ../tags/
-  - title: "About"
-    url: /about/
+    url: /categories/
